add DB functionalities w docker
